update gaps and fixed condition about movies

--- a/src/pages/weather/index.css
+++ b/src/pages/weather/index.css
@@ -34,7 +34,7 @@
 
 .weather {
   padding-top: 3vmax;
-  gap: 6vmax;
+  gap: 7vmax;
 }
 
 .weather h1, 
